:bug: fix: togolist 전체 조회 직렬화 문제 수정